# artifacts/api-server/src/routes/index.ts
@@ -7,6 +7,7 @@ import taxiRouter from "./taxi";
 import trainsRouter from "./trains";
 import usageRouter from "./usage";
 import walkRouter from "./walk";
+import enterpriseRouter from "./enterprise";
 
 const router: IRouter = Router();
 
@@ -18,5 +19,6 @@ router.use(addressesRouter);
 router.use(placesRouter);
 router.use(usageRouter);
 router.use(walkRouter);
+router.use(enterpriseRouter);
 
 export default router;
